# test_orch

./: .env.example  .gitattributes  ARCHITECTURE_CODE_REVIEW.md  Makefile  README.md  REVIEW_SUMMARY.md  SETUP_AND_TESTING.md  WORKER_CODE_REVIEW.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_admin_user.sh
backend/: Dockerfile  README.md  celery_client.py  config.py  database.py  main.py  models.py
backend/auth/: __init__.py  ldap_auth.py
backend/services/: __init__.py  influx_client.py  maintenance.py  quali_client.py  scheduler.py  status_render.py
backend/templates/: admin.html  base.html  dashboard.html  login.html  test_logs.html
examples/mvp-test/: Dockerfile  build.sh  run_test.py
shared/: README.md  __init__.py  host_stats.py  schemas.py  validation.py
tests/: __init__.py  conftest.py  test_auth.py  test_dispatch.py  test_host_stats.py  test_influx_client.py  test_maintenance.py  test_poll_state.py  test_routes.py  test_scheduler.py  test_schemas.py  test_status_render.py  test_translation_layer.py  test_validation.py
worker/: Dockerfile  README.md  __init__.py  artifact_uploader.py  celery_app.py  docker_engine.py  tasks.py  translation_layer.py
